{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 11,
  "lineage": "e6730ca0-a4c5-3ac0-156a-db95d70f20f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137008403814:internet-gateway/igw-026b131a996417db1",
            "id": "igw-026b131a996417db1",
            "owner_id": "137008403814",
            "tags": {
              "Name": "ai-itsm-igw",
              "Project": "ai-itsm"
            },
            "tags_all": {
              "Name": "ai-itsm-igw",
              "Project": "ai-itsm"
            },
            "vpc_id": "vpc-0d8076485ebe56b59"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137008403814:route-table/rtb-07ad1f84d98e35ccf",
            "id": "rtb-07ad1f84d98e35ccf",
            "owner_id": "137008403814",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026b131a996417db1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ai-itsm-public-rt",
              "Project": "ai-itsm"
            },
            "tags_all": {
              "Name": "ai-itsm-public-rt",
              "Project": "ai-itsm"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8076485ebe56b59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b5dd14a1dc7eb51",
            "route_table_id": "rtb-07ad1f84d98e35ccf",
            "subnet_id": "subnet-04772d87b8ad7a026"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137008403814:security-group/sg-0200944e463f55391",
            "description": "Security group for ITSM app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0200944e463f55391",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8004
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ai-itsm-sg",
            "name_prefix": "",
            "owner_id": "137008403814",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ai-itsm-sg",
              "Project": "ai-itsm"
            },
            "tags_all": {
              "Name": "ai-itsm-sg",
              "Project": "ai-itsm"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8076485ebe56b59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137008403814:subnet/subnet-04772d87b8ad7a026",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04772d87b8ad7a026",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137008403814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-itsm-public-subnet",
              "Project": "ai-itsm"
            },
            "tags_all": {
              "Name": "ai-itsm-public-subnet",
              "Project": "ai-itsm"
            },
            "vpc_id": "vpc-0d8076485ebe56b59"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137008403814:vpc/vpc-0d8076485ebe56b59",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a57737bf6e04eb7b",
            "default_route_table_id": "rtb-0c961602b70d18550",
            "default_security_group_id": "sg-0653ee237ab23af2d",
            "dhcp_options_id": "dopt-0bdc6af46f1152127",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8076485ebe56b59",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c961602b70d18550",
            "owner_id": "137008403814",
            "tags": {
              "Name": "ai-itsm-vpc",
              "Project": "ai-itsm"
            },
            "tags_all": {
              "Name": "ai-itsm-vpc",
              "Project": "ai-itsm"
            }
          }
        }
      ]
    }
  ]
}